--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 h1 {
   text-align: center;
-  color: fff;
+  color: #fff;
 }
 
 body {
-  background-color: dcdcdc;
+  background-color: #dcdcdc;
 }
