--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 h1 {
   text-align: center;
   color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 75px;
 }
 
-body {background-color: #cfc8c0;}
+body {background-color: #2e2f2d;}
